syntax = "proto3";

package model;

message Span {
        string service = 1;
        string name = 2;
        string resource = 3;
        uint64 traceID = 4;
        uint64 spanID = 5;
	int64 startTime = 6;
        int64 endTime = 7;
        int64 duration = 8;
        int32 error = 9;
        map<string, string> meta = 10;
        map<string, double> metrics = 11;
        uint64 parentID = 12;
        string type = 13;
}

message Trace {
	uint64 traceID = 1;
	repeated Span spans = 2;
	int64 startTime = 6;
        int64 endTime = 7;
}

message Transaction {
        Span span = 1;
        string message = 2;
}

message TracePayload {
        string hostName = 1;
        string env = 2;
        repeated Trace traces = 3;
}
